--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <meta name="description" content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !">
 	    <meta name="keywords" content="portfolio code study student">
-        <meta content="Mon Portfolio - Félix Laplace" property="og:title">
+        <meta content="Mon Portfolio - Developper Félix Laplace" property="og:title">
 	    <meta content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !" property="og:description">
         <link rel="stylesheet" href="assets/css/style.css">
 
