--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    <meta name="keywords" content="portfolio code study student">
             <meta content="Mon Portfolio - Developper Félix Laplace" property="og:title">
 	    <meta content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !" property="og:description">
-	    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"‎>
+	    <link rel="icon" type="image/x-icon" href="favicon.ico">
             <link rel="stylesheet" href="assets/css/style.css">
 
 
