--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	    <meta name="description" content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !">
 	    <meta name="keywords" content="portfolio code study student">
             <meta content="Mon Portfolio - Developper Félix Laplace" property="og:title">
-	    <link rel="icon" type="image/x-icon" href="favicon.ico">
+	    <meta property="og:image" content="favicon-32x32.png">
 	    <meta content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !" property="og:description">
             <link rel="stylesheet" href="assets/css/style.css">
 
@@ -37,7 +37,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Mon Portfolio - Developper Félix Laplace</title>
+        <titlePortfolio de Felix LAPLACE - Développeur Web / WebDesigner</title>
     </head>
     <body>
         <!--===== HEADER =====-->
