--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <meta name="description" content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !">
 	    <meta name="keywords" content="portfolio code study student">
-            <meta content="Mon Portfolio - Developper Félix Laplace" property="og:title">
+            <meta property="og:title" content="Felix LAPLACE étudiant et développeur web | Java  à Paris. Création de sites internet responsive.">
 	    <meta property="og:image" content="favicon-32x32.png">
 	    <meta content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !" property="og:description">
             <link rel="stylesheet" href="assets/css/style.css">
@@ -37,7 +37,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-        <titlePortfolio de Felix LAPLACE - Développeur Web / WebDesigner</title>
+        <title>Portfolio de Felix LAPLACE - Développeur Web / WebDesigner</title>
     </head>
     <body>
         <!--===== HEADER =====-->
