--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	    <meta name="keywords" content="portfolio code study student">
             <meta property="og:title" content="Felix LAPLACE étudiant et développeur web | Java  à Paris. Création de sites internet responsive.">
 	    <meta property="og:image" content="favicon-32x32.png">
+	    <link rel="icon" href="https://portfolio-felix-five.vercel.app/favicon.ico" type="image/x-icon"/>
 	    <meta content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !" property="og:description">
             <link rel="stylesheet" href="assets/css/style.css">
 
