--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <meta name="description" content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !">
-	    <meta name="keywords" content="portfolio code study student">
-            <meta property="og:title" content="Felix LAPLACE étudiant et développeur web | Java  à Paris. Création de sites internet responsive.">
-	    <meta property="og:image" content="https://portfolio-felix-five.vercel.app/favicon-32x32.png">
-	    <link rel="icon" href="https://portfolio-felix-five.vercel.app/favicon.ico" type="image/x-icon"/>
-	    <meta content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !" property="og:description">
-            <link rel="stylesheet" href="assets/css/style.css">
+	<meta name="author" content="Felix LAPLACE">
+	<meta name="description" content="Felix LAPLACE étudiant et développeur web | Java à Paris. Création de sites internet . Voici mon portfolio où vous retrouverez tous mes projets, ainsi que mes réseaux pour me contacter">
+	<meta name="Keywords" content="portfolio, failaxite, Referencement web, Felix Laplace, Developpeur web, Symfony, BTS SIO, Développeur Java, Spigot, Informatique, Master, chef de projet , linux">
+        <meta property="og:title" content="Felix LAPLACE étudiant et développeur web | Java  à Paris. Création de sites internet responsive.">
+	<meta property="og:image" content="https://portfolio-felix-five.vercel.app/favicon-32x32.png">
+	<link rel="icon" href="https://portfolio-felix-five.vercel.app/favicon.ico" type="image/x-icon"/>
+	<meta content="Bienvenue sur mon portfolio ! Je suis étudiant en 2e année à l'IIM en Coding & Digital Innovation et je vous présente ici quelques projets !" property="og:description">
+        <link rel="stylesheet" href="assets/css/style.css">
 
 
         <script type="application/ld+json">
