--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               "@context": "https://schema.org/",
               "@type": "Person",
               "name": "Felix Laplace",
-              "url": "http://34.88.69.92/",
+              "url": "https://portfolio-felix-five.vercel.app/",
               "image": "https://media-exp1.licdn.com/dms/image/C4D03AQHsKY00s9TVCQ/profile-displayphoto-shrink_200_200/0/1646155529522?e=1673481600&v=beta&t=HueS6z4taCR6zTVhD6QMI-mnayLtrE6J7xp3MrY124Q",
               "sameAs": [
                 "https://twitter.com/failaxite",
