--- a/index.html
+++ b/index.html
@@ -430,19 +430,19 @@
                 <h2 class="section-title">Projects</h2>
 
                 <div class="work__container grided">
-                    <a href="https://historiamc.com" aria-label="HistoriaMcProject" class="work__img">
+                    <a href="https://discord.historiamc.com" aria-label="HistoriaMcProject" class="work__img">
                         <img src="assets/img/historia.webp" alt="HistoriaMC">
                     </a>
-                    <a href="https://ecostream.com" aria-label="Ecostream Project" class="work__img">
+                    <a href="https://github.com/failaxite/EcoStream" aria-label="Ecostream Project" class="work__img">
                         <img src="assets/img/ecostream.webp" alt="Ecostream">
                     </a>
                     <a href="https://youtube.com/c/failaxite" aria-label="Youtube Channel Project" class="work__img">
                         <img src="assets/img/youtube.webp" alt="failaxite channel">
                     </a>
-                    <a href="https://historiamc.com" aria-label="Bot Discord Musique Project" class="work__img">
+                    <a href="https://discord.historiamc.com" aria-label="Bot Discord Musique Project" class="work__img">
                         <img src="assets/img/musiquebot.webp" alt="Discord Bot">
                     </a>
-                    <a href="https://wishify.com" aria-label="Wishify Project" class="work__img">
+                    <a href="https://github.com/failaxite/Wishify" aria-label="Wishify Project" class="work__img">
                         <img src="assets/img/wishify.webp" alt="Wishify">
                     </a>
                 </div>
