--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     
                     <div>
                         <h2 class="subtitle_about">I'am Felix</h2>
-                        <p class="text_about">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
+                        <p class="text_about">Hello ! I'm Felix Laplace, a beginner developer / webdesigner. I love everything related to computers and digital. I also like Anime/Manga and Sports.</p>           
                     </div>                                   
                 </div>
             </section>
